modules/ballerina-core/src/test/resources/samples/parser/invalidSemantic/DuplicateVariables.bal
package samples.parser.invalidSemantic;

function main(string[] i) {

	// Following line is invalid.
	boolean b;
	float b;
	reply m;
}
